--- a/src/tomtom/www/index.html
+++ b/src/tomtom/www/index.html
@@ -3,67 +3,65 @@
   <title> Tomtom </title>
   <meta charset="UTF-8" />
   <head>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400' rel='stylesheet' type='text/css'>
-    <style>
-      a
-      {
-        text-decoration: none;
-        font-size:10pt;
-      }
-      .unread {
-        font-weight: bold;  
-      }
-      .read {
-        font-weight: normal;
-      }
-
-      #blurb p {
-        margin: 0px;
-      }
-    </style>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css' />
+    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400' rel='stylesheet' type='text/css' />
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+    <link href='css/tomtom.css' rel='stylesheet' type='text/css' />
+    <link rel="shortcut icon" href="favicon.ico" />
     <script src="scripts/angular.min.js" /></script>
     <script src="scripts/tomtom.js" /></script>
   </head>
-  <body ng-controller="TomTomCtrl" style="font-family:Open Sans;sans-serif;font-size:10pt">
-    <div style="width:95%">
-      <div style="clear:none;float:left;;max-width:250px;width:18%;margin:0px auto;position:fixed;border-right:1px solid #EEEEEE;padding-right:26px;">
-        <div style="margin-bottom:20px;margin-left:10px;">
-          <label for="url"> URL: </label>
-          <input id="url" style="width:90%;" type="text" ng-model="new_url" />
+  <body ng-controller="TomTomCtrl">
+    <div ng-show="import_triggered" style="position:absolute; top:25%; left:25%; background:lightgray; width:350px; height:100px">
+      <input type="button" style="float:right" ng-click="importDone()" value="X"></input>
+      <iframe style="margin-top:10px;" width="100%" height="30%" src="import.html" frameborder="0"></iframe>  
+    </div>
+    <div class="topRow">
+      <div class="topBar">
+        <div class="websiteCaption"> tomtom </div>
+        <div class="urlAddBar">
+          <input id="url" style="width:75%;" type="text" ng-model="new_url" />
           <input type="button" ng-click="addUrl();" value="Add" />
+          &nbsp; 
+          <input type="button" ng-click="importFeeds();" value="Import" />
         </div>
-        <div style="float:left;margin:10px;line-height:1.5">
-          <div ng-show="loading_feeds || adding_feed" style="padding-left:50%; padding-top:25%">
+      </div>
+    </div>
+    <div class="content">
+      <div class="feedsBar">
+        <div class="feedsListContainer">
+          <div ng-show="loading_feeds || adding_feed" class="spinner">
             <img src="images/ajax-loader.gif" />
           </div>
-          <div ng-hide="loading_feeds || adding_feed" ng-repeat="feed in feeds" >
-              <div style="padding-bottom:5px"> <a  href="#" ng-click="loadFeed(feed.Id);" ng-bind-html-unsafe="feed.Title" ng-class="{'unread': feed.UnreadItemsCount > 0, 'read': feed.UnreadItemsCount == 0}"> </a> <span style="font-size:8pt;color:#777777"> ({{feed.UnreadItemsCount}}) </span> </div>
+          <div class="feed" ng-hide="loading_feeds || adding_feed" ng-repeat="feed in feeds" >
+            <div class="title">
+              <a  href="#" ng-click="loadFeed(feed.Id);" ng-bind-html-unsafe="feed.Title" ng-class="{'unread': feed.UnreadItemsCount > 0, 'read': feed.UnreadItemsCount == 0}"> </a> 
+            </div> 
+            <!--<div class="unreadItemNumberContainer"> ({{feed.UnreadItemsCount}}) </div>-->
           </div>
         </div>
       </div>
-      <div style="clear:none;overflow:auto;max-width:960px;width:80%;margin-left:23%">
-        <div ng-show="loading_feed_items" style="padding-left:50%; padding-top:25%">
+      <div class="feedItemsContainer">
+        <div ng-show="loading_feed_items" class="spinner">
           <img src="images/ajax-loader.gif" />
         </div>
         <div ng-show="current_feed_id==''">
-          <a href="#" ng-repeat="pair in pairs" style="margin-bottom:15px;">
+          <a href="#" ng-repeat="pair in pairs" class="recentItemPair">
             <div ng-click="loadFeed(pair.Feed.Id)">
-              <div ng-bind-html-unsafe="pair.Feed.Title" style="font-family:Droid Serif serif; font-size: 1.5em;margin-bottom:15px;margin-top:20px;"></div> 
-              <div ng-bind-html-unsafe="pair.FeedItem.Title" style="font-size:1.2em;margin-bottom"></div>
+              <div ng-bind-html-unsafe="pair.Feed.Title" class="feedTitle"></div> 
+              <div ng-bind-html-unsafe="pair.FeedItem.Title" class="feedItemTitle"></div>
               <div id="blurb" ng-bind-html-unsafe="pair.FeedItem.Blurb"></div>
             </div>
           </div>
         </a>
-        <div ng-hide="loading_feed_items" ng-repeat="item in items" style="margin:bottom:10px;">
-          <a style="text-decoration:none" id="{{item.Id}}" href="{{item.Url}}">
-            <div style="font-family:Droid Serif;serif;font-size:2em;margin-top:10px;" when-scrolled="moreOfFeed()" ng-bind-html-unsafe="item.Title"></div>
+        <div  ng-repeat="item in items" style="margin:bottom:10px;">
+          <a id="{{item.Id}}" href="{{item.Url}}">
+            <div class="feedTitle" when-scrolled="moreOfFeed()" ng-bind-html-unsafe="item.Title"></div>
           </a>
-          <div style="font-size:10pt;line-height:1.4"  ng-bind-html-unsafe="item.Contents"></div>
-          <div style="max-width:100%;margin:auto;border-top:1px solid #EEEEEE;"></div>
+          <div class="contentsText"  ng-bind-html-unsafe="item.Contents"></div>
         </div>
-        <div ng-show="more_to_fetch" style="margin:20px;background:#EEEEEE">
-            <input type="button" ng-click="moreOfFeed();" value="Show more" style="margin-left:35%;" />
+        <div ng-show="more_to_fetch" class="moreContentsBar">
+          <input type="button" ng-click="moreOfFeed();" value="Show more" style="margin-left:45%;" />
         </div>
       </div>
     </div>
