Fix issue #1 - allow other Unicode encodings in feeds

--- a/src/tomtom/www/index.html
+++ b/src/tomtom/www/index.html
@@ -20,7 +20,7 @@
       <div class="topBar">
         <div class="websiteCaption"> tomtom </div>
         <div class="urlAddBar">
-          <input id="url" style="width:75%;" type="text" ng-model="new_url" />
+          <input id="url" style="width:75%;" type="text" placeholder="Enter feed URL" ng-model="new_url" />
           <input type="button" ng-click="addUrl();" value="Add" />
           &nbsp; 
           <input type="button" ng-click="importFeeds();" value="Import" />
