Fix CSS and layout a bit, and fix nested double quotes in iframe tag

--- a/src/tomtom/www/import.html
+++ b/src/tomtom/www/import.html
@@ -5,7 +5,7 @@
     <link href='css/tomtom.css' rel='stylesheet' type='text/css' />
   </head>
   <body>
-    <form enctype="multipart/form-data" method="post" action="/import" onsubmit="document.getElementById("status").innerHTML='Importing...'">
+    <form enctype="multipart/form-data" method="post" action="/import" onsubmit="document.getElementById('status').innerHTML='Importing...'">
       <input type="file" name="opmlFile" />
       <input type="submit" value="Upload" />
       <div id="status"></div>
