--- a/src/tomtom/www/index.html
+++ b/src/tomtom/www/index.html
@@ -3,6 +3,7 @@
   <title> Tomtom </title>
   <meta charset="UTF-8" />
   <head>
+    <base target='_blank' />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
