--- a/src/tomtom/www/index.html
+++ b/src/tomtom/www/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <script src="scripts/angular.min.js" /></script>
     <script src="scripts/tomtom.js" /></script>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body ng-controller="TomTomCtrl">
     <div ng-show="import_triggered" style="position:absolute; top:25%; left:25%; background:lightgray; width:350px; height:100px">
@@ -18,39 +19,41 @@
       <iframe style="margin-top:10px;" width="100%" height="30%" src="import.html" frameborder="0"></iframe>  
     </div>
     <div class="topRow">
-      <div class="topBar">
-        <div class="websiteCaption"> tomtom </div>
-        <div class="urlAddBar">
-          <input id="url" style="width:75%;" type="text" placeholder="Enter feed URL" ng-model="new_url" />
-          <input type="button" ng-click="addUrl();" value="Add" />
-          &nbsp; 
-          <input type="button" ng-click="importFeeds();" value="Import" />
-        </div>
-        <div style="clear:none; width:50%;margin:0px auto;margin-top:5px;padding:5px" ng-show="current_feed_id!=''">
-          <input type="button" value="Unsubscribe" ng-click="removeFeed(current_feed_id)" />
-        </div>
-      </div>
-    </div>
+	<div class="websiteCaption"> <i class="fa fa-rss"></i> tomtom 
+	<a href="#" target="_self" id="button"  ng-click="toggleSettings();" style="float:right;"><i class="fa fa-cogs"></i></a>
+	</div>
+   </div>
     <div class="content">
-      <div class="feedsBar">
-        <div class="feedsListContainer">
-          <div ng-show="loading_feeds || adding_feed" class="spinner">
-            <img src="images/ajax-loader.gif" />
-          </div>
-          <div class="feed" ng-hide="loading_feeds || adding_feed" ng-repeat="feed in feeds" >
-            <div class="title">
-              <a  href="#/{{feed.Id}}" ng-click="loadFeed(feed.Id);" ng-bind-html-unsafe="feed.Title" ng-class="{'unread': feed.UnreadItemsCount > 0, 'read': feed.UnreadItemsCount == 0}"> </a> 
-            </div> 
-            <!--<div class="unreadItemNumberContainer"> ({{feed.UnreadItemsCount}}) </div>-->
-          </div>
+       <div class="feedsBar">
+	  <div class="feedsListContainer">
+	    <div ng-show="loading_feeds || adding_feed" class="spinner">
+	      <img src="images/ajax-loader.gif" />
+	    </div>
+	    <div class="feed" ng-hide="loading_feeds || adding_feed" ng-repeat="feed in feeds" >
+	      <div class="title">&nbsp;
+		<a  href="#/{{feed.Id}}" ng-click="loadFeed(feed.Id);" ng-bind-html-unsafe="feed.Title" ng-class="{'unread': feed.UnreadItemsCount > 0, 'read': feed.UnreadItemsCount == 0}"> </a> 
+	      </div> 
+	    </div>
+	  </div>
         </div>
-      </div>
       <div class="feedItemsContainer">
+	<div style="clear:none;float:left;margin:5px;width:60%;" ng-show="show_settings==true">
+	  <span style="margin:5px;">
+	    <a id="button" href="#" target="_self" ng-click="removeFeed(current_feed_id)" ng-show="current_feed_id!=''"><i class="fa fa-minus"></i></a>
+	  </span>
+	  <span style="margin:5px;"> 
+	    <input id="url" type="text" style="float:left;margin:5px;width:50%;" placeholder="Enter feed URL" ng-model="new_url" />
+	    <a href="#" id="button" target="_self" ng-click="addUrl();"> <i class="fa fa-plus"></i></a> 
+	  </span>
+	  <span style="margin:5px;"> 
+	     <a id="button" href="#" target="_self" ng-click="importFeeds();"><i class="fa fa-upload"></i></a>
+          </span>
+	</div>
         <div ng-show="loading_feed_items" class="spinner">
           <img src="images/ajax-loader.gif" />
         </div>
-        <div ng-show="current_feed_id==''">
-          <a href="#" ng-repeat="pair in pairs" class="recentItemPair" style="color:black">
+        <div style="clear:left;" ng-show="current_feed_id==''">
+          <a href="#" target="_self" ng-repeat="pair in pairs" class="recentItemPair" style="color:black">
             <div ng-click="loadFeed(pair.Feed.Id)">
               <div ng-bind-html-unsafe="pair.Feed.Title" class="feedTitle" style="color:#AAAAAA"></div> 
               <div ng-bind-html-unsafe="pair.FeedItem.Title" class="feedItemTitle" style="margin-left:20px;"></div>
@@ -58,7 +61,7 @@
             </div>
           </a>
         </div>
-        <div ng-hide="current_feed_id==''">
+        <div style="clear:left" ng-hide="current_feed_id==''">
           <div  ng-repeat="item in items" style="margin:bottom:10px;">
             <a id="{{item.Id}}" href="{{item.Url}}">
               <div class="feedItemTitle" when-scrolled="moreOfFeed()" ng-bind-html-unsafe="item.Title"></div>
